@@ -5,13 +5,13 @@
 jQuery.extend(jQuery.validator.messages, {
         required: "Dit is een verplicht veld.",
         remote: "Controleer dit veld.",
-        email: "Vul hier een geldig email adres in.",
+        email: "Vul hier een geldig e-mailadres in.",
         url: "Vul hier een geldige URL in.",
         date: "Vul hier een geldige datum in.",
-        dateISO: "Vul hier een geldige datum in (ISO).",
-        number: "Vul hier een geldig nummer in.",
-        digits: "Vul hier alleen nummers in.",
-        creditcard: "Vul hier een geldig credit card nummer in.",
+        dateISO: "Vul hier een geldige datum in (ISO-formaat).",
+        number: "Vul hier een geldig getal in.",
+        digits: "Vul hier alleen getallen in.",
+        creditcard: "Vul hier een geldig creditcardnummer in.",
         equalTo: "Vul hier dezelfde waarde in.",
         accept: "Vul hier een waarde in met een geldige extensie.",
         maxlength: jQuery.validator.format("Vul hier maximaal {0} tekens in."),
